# BioImageLab

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/biose/: CMakeLists.txt  bioseApp.cpp  bioseController.cpp  bioseController.h
app/bioseapp/: CMakeLists.txt  bioseApp.cpp  bioseController.cpp  bioseController.h
app/blFinder/: CMakeLists.txt  blFinderAdminApp.cpp  blFinderApp.cpp
app/blHome/: CMakeLists.txt  blHomeApp.cpp
app/blLab/: CMakeLists.txt  blLabApp.cpp  blLabController.cpp  blLabController.h
app/blProject/: CMakeLists.txt  blProjectApp.cpp
app/blTool/: CMakeLists.txt  blToolApp.cpp
src/: CMakeLists.txt
src/blCore/: CMakeLists.txt  blDir.cpp  blDir.h  blException.h  blLocalFiles.cpp  blLocalFiles.h  blSettings.cpp  blSettings.h  blSettingsAccess.cpp  blSettingsAccess.h  blSettingsGroups.cpp  blSettingsGroups.h
src/blFinder/: CMakeLists.txt
src/blFinder/controller/: blFinderAdminDefaultWidget.cpp  blFinderAdminDefaultWidget.h  blFinderDefaultWidget.cpp  blFinderDefaultWidget.h
src/blFinder/model/: blFinderAccess.cpp  blFinderAccess.h  blFinderAuthorInfo.cpp  blFinderAuthorInfo.h  blFinderCategoryInfo.cpp  blFinderCategoryInfo.h  blFinderDatabase.cpp  blFinderDatabase.h  blFinderKeywordInfo.cpp  blFinderKeywordInfo.h  blFinderOriginInfo.cpp  blFinderOriginInfo.h  blFinderSectionInfo.cpp  blFinderSectionInfo.h  blFinderSectionsLinkInfo.cpp  blFinderSectionsLinkInfo.h  blFinderTutorialInfo.cpp  blFinderTutorialInfo.h  blFinderTutorialsLinkInfo.cpp  blFinderTutorialsLinkInfo.h  blSingleton.h
src/blFinder/view/: blFinderAdminAuthorEdit.cpp  blFinderAdminAuthorEdit.h  blFinderAdminAuthorTable.cpp  blFinderAdminAuthorTable.h  blFinderAdminBar.cpp  blFinderAdminBar.h  blFinderAdminCategoriesTable.cpp  blFinderAdminCategoriesTable.h  blFinderAdminCategoryEdit.cpp  blFinderAdminCategoryEdit.h  blFinderAdminKeywordEdit.cpp  blFinderAdminKeywordEdit.h  blFinderAdminKeywordsTable.cpp  blFinderAdminKeywordsTable.h  blFinderAdminOriginEdit.cpp  blFinderAdminOriginEdit.h  blFinderAdminOriginsTable.cpp  blFinderAdminOriginsTable.h  blFinderAdminSectionEdit.cpp  blFinderAdminSectionEdit.h  blFinderAdminSectionsLinkEdit.cpp  blFinderAdminSectionsLinkEdit.h  blFinderAdminSectionsLinksTable.cpp  blFinderAdminSectionsLinksTable.h  blFinderAdminSectionsTable.cpp  blFinderAdminSectionsTable.h  blFinderAdminTutorialEdit.cpp  blFinderAdminTutorialEdit.h  blFinderAdminTutorialsLinkEdit.cpp  blFinderAdminTutorialsLinkEdit.h  blFinderAdminTutorialsLinksTable.cpp  blFinderAdminTutorialsLinksTable.h  blFinderAdminTutorialsTable.cpp  blFinderAdminTutorialsTable.h  blFinderBar.cpp  blFinderBar.h  blFinderBrowser.cpp  blFinderBrowser.h  blFinderItem.cpp  blFinderItem.h  (+4 more)
src/blHome/: CMakeLists.txt
src/blHome/controller/: blHomeDefaultWidget.cpp  blHomeDefaultWidget.h
src/blHome/model/: blHomeSettings.cpp  blHomeSettings.h  blHomeSettingsGroups.cpp  blHomeSettingsGroups.h  blHomeTileInfo.cpp  blHomeTileInfo.h
src/blHome/view/: blHomeSettingsGroupView.cpp  blHomeSettingsGroupView.h  blHomeSettingsView.cpp  blHomeSettingsView.h  blHomeWidget.cpp  blHomeWidget.h  blHomeWidgetBar.cpp  blHomeWidgetBar.h  blHomeWidgetTile.cpp  blHomeWidgetTile.h
src/blProject/: CMakeLists.txt
src/blProject/controller/: blProjectBrowserController.cpp  blProjectBrowserController.h  blProjectWidget.cpp  blProjectWidget.h
src/blProject/model/: blCreateMiniature.cpp  blCreateMiniature.h  blDataInfo.h  blFileSearch.cpp  blFileSearch.h  blImportDataInfo.h  blMainColumnInfo.cpp  blMainColumnInfo.h  blProjectAccess.cpp  blProjectAccess.h  blProjectDatabase.cpp  blProjectDatabase.h  blProjectFolderFilter.cpp  blProjectFolderFilter.h  blProjectFolderLabelExtractor.cpp  blProjectFolderLabelExtractor.h  blProjectIndex.cpp  blProjectInfo.cpp  blProjectInfo.h  blProjectManagerColumnData.cpp  blProjectManagerColumnData.h  blProjectModel.cpp  blProjectModel.h  blProjectModelColumn.cpp  blProjectModelColumn.h  blProjectModelMainColumn.cpp  blProjectModelMainColumn.h  blProjectTagsInfo.h
src/blProject/view/: HierarchicalHeaderView.cpp  blProjectAddImageWidget.cpp  blProjectAddImageWidget.h  blProjectAddRemoveSubColumnWidget.cpp  blProjectAddRemoveSubColumnWidget.h  blProjectBrowserWidget.cpp  blProjectBrowserWidget.h  blProjectBrowserWidgetList.cpp  blProjectBrowserWidgetList.h  blProjectBrowserWidgetToolBar.h  blProjectControler.cpp  blProjectControler.h  blProjectImportConditionalView.h  blProjectLabelSplitter.cpp  blProjectLabelSplitter.h  blProjectNewFormWidget.cpp  blProjectNewFormWidget.h  blProjectNewFormWidgetDescription.cpp  blProjectNewFormWidgetDescription.h  blProjectNewFormWidgetFilter.cpp  blProjectNewFormWidgetFilter.h  blProjectNewFormWidgetFilterSingle.cpp  blProjectNewFormWidgetFilterSingle.h  (+19 more)
src/blProjectBrowser/: CMakeLists.txt
src/blProjectCore/: CMakeLists.txt
src/blProjectEditor/: CMakeLists.txt
src/blProjectOld/: CMakeLists.txt
src/blProjectnew/: CMakeLists.txt
src/blTool/: CMakeLists.txt
src/blToolCore/: CMakeLists.txt
src/blToolProjectPlugin/: CMakeLists.txt  blToolInputSelectorWidgetProject.cpp  blToolInputSelectorWidgetProject.h  blToolInputWidgetProject.cpp  blToolInputWidgetProject.h  blToolProjectPlugin.cpp  blToolProjectPlugin.h  blToolProjectPlugin.json
src/blWidgets/: CMakeLists.txt  blBrowseBarWidget.cpp  blBrowseBarWidget.h  blButtonId.cpp  blButtonId.h  blButtonId2.cpp  blButtonId2.h  blClickableIcon.cpp  blClickableIcon.h  blClosableButton.cpp  blClosableButton.h  blFlowLayout.cpp  blFlowLayout.h  blHideableWidget.cpp  blHideableWidget.h  blHoverWidget.cpp  blHoverWidget.h  blHoverableWidget.cpp  blHoverableWidget.h  blImageView.cpp  blImageView.h  blMultipleComboBox.cpp  blMultipleComboBox.h  blMultipleLineEdit.cpp  blMultipleLineEdit.h  blSearchBarWidget.cpp  blSearchBarWidget.h  blSlidingStackedWidget.h  blTwoSideLeftContainer.cpp  blTwoSideLeftContainer.h  blTwoSideRightContainer.cpp  blTwoSideRightContainer.h  blTwoSideWidget.cpp  blTwoSideWidget.h  blTwoSidedContainer.cpp  blTwoSidedContainer.h  blWebBrowser.cpp  blWebBrowser.h
(+174 files in other folders)
