############################################################
#
# $Id$
#
# Copyright (c) BioImageLab 2015
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( blTool )
add_subdirectory( blFinder )
add_subdirectory( blHome )
add_subdirectory( biose )
